--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+
+
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 html,body{
@@ -11,11 +14,13 @@ html,body{
 
 body{
     box-sizing: border-box;
-    background-color: rgb(41, 41, 41);
+    background-color: #002132;
     text-align: center;
 }
 
-div{
+.assesment{
+    border-radius: 15px;
+    padding: 20px;
     gap: 20px;
     margin-top: 100px;
     margin-left: auto;
@@ -23,48 +28,200 @@ div{
     text-align: center;
     justify-content: center;
     align-items: center;
-  width: 500px;
+    width: 500px;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    background-color: rgb(58, 59, 59);
+    background-color:#003049;
+    border-radius:10px ;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
 }
 
-h1,h2,h3{
-    color: aliceblue;
+h1,h2,h3,p,label{
+    
+   color: white;
+
 }
 
 h1{
     display: block;
-    font-size: 40px;
-    text-align: start;
+    font-size: 30px;
+    font-weight: 300;
 }
 
 h2{
-    font-size: 10px;
+    color: #ffbd26;
+    font-size: 20px;
 }
 
 h3{
     font-size:14px
 }
+p{
+
+}
 
 button{
+    background-color:#002132 ;
+    color: #ffffff;
+    box-shadow: 0px;
+    
     width: 60px;
     height: 20px;
+    border: 0px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    margin-bottom: 10px;   
+    font-weight: 100; 
+   
+    box-shadow: 0px 2px 2px rgba(50, 50, 50, 0.25);
+
+    
+ 
 }
 
-input{
+button:active{
+    color: #ffffff;
+    background-color: #ffbd26;
+
+}
+#jobtitle-input{
+content-visibility: none;
+color: #002132;
+    width: 50%;
+    height: 20px;
+   border: 0px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 10px;
+}
+
+#jobtitle-input {
 text-align: left;
-    display: inline-block;
-}
- label{
-    text-align: left;
-
-    display: inline-block;
+display: inline-block;
 }
 
 
-.submit--btn{
-    color: red;
-    background-color: aqua;
+
+
+nav{
+background-color:#003049;
+    position: sticky;
+width: 100%;
+height: 50px;
+top: 0px;   
 }
+
+input:focus {
+    outline: none;
+  }
+
+
+  .question--box{
+    display: flex;
+    flex-direction: column;
+   justify-content: flex-start;
+   align-items: flex-start; 
+   background-color:#003049;
+
+}
+
+  .choices--box{
+    display: flex;
+    justify-content: space-evenly;
+
+  }
+
+  .cources--box{
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #003049;
+    margin: 30px;
+    width: 300px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+  
+.main--cources--container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 83px;
+    border-radius:10px ;
+    -webkit-border-radius:10px ;
+    -moz-border-radius:10px ;
+    -ms-border-radius:10px ;
+    -o-border-radius:10px ;
+}
+
+  .lds-ellipsis {
+
+    display: flex;
+    position: absolute;
+top:50% ;
+bottom: 50%;
+
+    width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .lds-ellipsis div {
+    position: absolute;
+    top: 33px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: #fff;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+    left: 8px;
+    animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+    left: 8px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+    left: 32px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+    left: 56px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(24px, 0);
+    }
+  }
+  
