--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,8 @@
 html,body{
     width: 100vw;
     height: 100vh;
+    position: relative;
+    z-index: 0;
 
 }
 
@@ -16,6 +18,7 @@ body{
     box-sizing: border-box;
     background-color: #002132;
     text-align: center;
+
 }
 
 .assesment{
@@ -225,3 +228,26 @@ bottom: 50%;
     }
   }
   
+  button:disabled{
+    visibility: hidden;
+  }
+
+
+#logo{
+  width: 100px;
+ 
+}
+
+.blur{
+  position: absolute;
+  background: rgba(52, 58, 65, 0.600000);
+  filter: blur(18px);
+ backdrop-filter: blur(15px);
+  height: 100%;
+  width: 100%;
+  z-index: -50;
+
+ transition:filter 5s sease-in-out;
+ 
+}
+
