--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,11 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    transition: all 1s ease-in-out 0s;
+    -webkit-transition: all 1s ease-in-out 0s;
+    -moz-transition: all 1s ease-in-out 0s;
+    -ms-transition: all 1s ease-in-out 0s;
+    -o-transition: all 1s ease-in-out 0s;
 }
 
 html,body{
@@ -166,18 +171,23 @@ input:focus {
     -o-border-radius:10px ;
 }
 
+.spinner{
+
+display: flex;
+
+position: absolute;
+left: 50%;
+top: 30%;
+z-index: 5;
+
+  }
+
+
   .lds-ellipsis {
 
-    display: flex;
-    position: absolute;
-top:50% ;
-bottom: 50%;
 
-    width: 100%;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-  }
+
+}
   .lds-ellipsis div {
     position: absolute;
     top: 33px;
@@ -239,15 +249,45 @@ bottom: 50%;
 }
 
 .blur{
-  position: absolute;
-  background: rgba(52, 58, 65, 0.600000);
-  filter: blur(18px);
- backdrop-filter: blur(15px);
+  opacity: 0;
+  filter: blur(5px);
   height: 100%;
   width: 100%;
-  z-index: -50;
-
- transition:filter 5s sease-in-out;
- 
+  transition: all 1s ease-in-out 0s;
+  -webkit-transition: all 1s ease-in-out 0s;
+  -moz-transition: all 1s ease-in-out 0s;
+  -ms-transition: all 1s ease-in-out 0s;
+  -o-transition: all 1s ease-in-out 0s;
+  -webkit-filter: blur(5px);
+  animation: blur 3s ease-in-out 0s 1 ;
+  -webkit-animation: blur 3s ease-in-out 0s 1 ;
 }
 
+@keyframes blur {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+.unblur{
+  opacity: 1;
+  filter: blur(0px);
+  height: 100%;
+  width: 100%;
+  transition: all 1.5s ease-in-out 0s;
+  -webkit-transition: all 1.5s ease-in-out 0s;
+  -moz-transition: all 1.5s ease-in-out 0s;
+  -ms-transition: all 1.5s ease-in-out 0s;
+  -o-transition: all 1.5s ease-in-out 0s;
+  -webkit-filter: blur(0px);
+}
+
+#Heading--404{
+
+}
